<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal"
            android:text="DietApp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:background="@null"
            android:textSize="50dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            ></TextView>

        <!-- Table layout -->

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Email -->

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                >

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/editTextTextEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress" />
            </TableRow>
            <!-- Email END-->


            <!-- Date of Birth -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date_of_birth"
                    android:layout_marginTop="15dp"/>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <EditText
                            android:id="@+id/editTextDOBDay"
                            android:layout_width="53dp"
                            android:layout_height="wrap_content"
                            android:ems="2"
                            android:inputType="numberSigned" />

                        <Spinner
                            android:id="@+id/spinnerDOBMonth"
                            android:layout_width="110dp"
                            android:layout_height="wrap_content"
                            android:entries="@array/array_months"
                            tools:visibility="visible"
                            android:textSize="10sp"/>

                        <EditText
                            android:id="@+id/editTextDOBYear"
                            android:layout_width="53dp"
                            android:layout_height="wrap_content"
                            android:ems="2"
                            android:inputType="numberSigned" />

                    </TableRow>



                </TableLayout>

            </TableRow>

            <!-- Date of Birth END-->

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                >

                <TextView
                    android:id="@+id/textViewx"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blank" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="60dp"
                            android:layout_height="wrap_content"
                            android:ems="3"
                            android:text="@string/day" />

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="117dp"
                            android:layout_height="wrap_content"
                            android:ems="3"
                            android:text="@string/month" />

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="3"
                            android:text="@string/year" />

                    </TableRow>


                </TableLayout>

            </TableRow>
<!-- //Date of birth -->
            <!-- Gender -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="86dp"
                android:layout_marginTop="24dp"
                >>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    />
                />


                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <RadioGroup
                            android:id="@+id/radioGroup1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">>


                            <RadioButton
                                android:id="@+id/radioButtonGenderMale"
                                android:layout_width="117dp"
                                android:layout_height="wrap_content"
                                android:text="@string/male"
                                android:checked="true"
                                android:layout_marginRight="5dp"/>

                            <RadioButton
                                android:id="@+id/radioButtonGenderFemale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/female" />
                        </RadioGroup>
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </TableLayout>


            </TableRow>
            <!-- //Gender -->
            <!-- Measurement -->

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/measurement" />

                <Spinner
                    android:id="@+id/spinnerMeasurement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/array_measurements" />
            </TableRow>
            <!-- //Measurement -->
        </TableLayout>

            <!--</TableRow>-->
        <!--</TableLayout>-->

    </LinearLayout>

</ScrollView>

<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="791dp"
            android:fitsSystemWindows="true"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                        <EditText
                            android:id="@+id/mainPageTitle"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:text="DietApp"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="30dp"
                            android:layout_marginEnd="12dp"
                            android:background="@null"
                            android:textSize="50dp"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            />
                <EditText

                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="DietApfgfgfgfgp"
                    android:layout_marginEnd="12dp"
                    android:background="@null"
                    android:textSize="50dp"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toBottomOf="@+id/mainPageTitle"
                    />

            </LinearLayout>
        </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>-->
